fixed overflow bugs

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -131,7 +131,6 @@
     align-items: center;
     display: flex;
     max-height: 0;
-    overflow: hidden;
     opacity: 0;
     transition: all 0.3s ease-in-out;
   }
